# rcr

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: commands
src/rcr/: api.py  config.py  encoders.py  models.py  storage.py
tests/: test_api.py  test_encoding.py
